Fixed a path to an image
Folder containing it didn't upload to git correctly, so uploaded the image separately.

--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ h2 {
 }
 
 .folder {
-  background: url("./img/folderimg.jpeg");
+  background: url("./folderimg.jpeg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
